bin/fr/ubordeaux/arduinoCode/Parser.output
Terminaux inutilisés dans la grammaire

    "double"
    "foreach"
    "in"
    "long"


État 270 conflits: 1 décalage/réduction
État 297 conflits: 1 décalage/réduction
État 311 conflits: 1 décalage/réduction


Grammaire

    0 $accept: program $end

    1 program: list_of_definitions "begin" list_of_stms "end"

    2 list_of_definitions: %empty
    3                    | list_of_definitions definition

    4 list_of_stms: stm
    5             | list_of_stms stm

    6 definition: var_definition
    7           | type_definition
    8           | function_decl
    9           | procedure_decl
   10           | function_definition
   11           | procedure_definition

   12 var_definition: list_of_identifiers ':' type ';'

   13 list_of_identifiers: IDENTIFIER
   14                    | list_of_identifiers ',' IDENTIFIER

   15 type_definition: IDENTIFIER '=' type ';'

   16 function_decl: "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'

   17 procedure_decl: "procedure" IDENTIFIER '(' list_of_parameters ')' ';'

   18 $@1: %empty

   19 function_definition: "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

   20 $@2: %empty

   21 procedure_definition: "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

   22 list_of_parameters: parameter
   23                   | list_of_parameters ',' parameter

   24 parameter: IDENTIFIER ':' type

   25 block: list_of_stms

   26 type: "boolean"
   27     | number
   28     | "string" '[' INTEGER ']'
   29     | "range" "of" type
   30     | "set" "of" type
   31     | "list" "of" type
   32     | "enum" '(' list_of_identifiers ')'
   33     | "struct" '{' list_of_fields '}'

   34 list_of_fields: field
   35               | list_of_fields field

   36 field: IDENTIFIER ':' type ';'

   37 number: "byte"
   38       | "pin"
   39       | "unsigned" "byte"
   40       | "short"
   41       | "unsigned" "short"
   42       | "integer"
   43       | "unsigned" "integer"
   44       | "float"

   45 stm: left_part "++" ';'
   46    | left_part "--" ';'
   47    | left_part '=' expression ';'
   48    | left_part "+=" expression ';'
   49    | left_part "-=" expression ';'
   50    | left_part "*=" expression ';'
   51    | left_part "/=" expression ';'
   52    | left_part "%=" expression ';'
   53    | left_part "&=" expression ';'
   54    | left_part "|=" expression ';'
   55    | left_part "&&=" expression ';'
   56    | left_part "||=" expression ';'
   57    | "if" '(' expression ')' '{' stm '}' "else" '{' stm '}'
   58    | "if" '(' expression ')' '{' stm '}'
   59    | "if" '(' expression ')' stm "else" stm
   60    | "if" '(' expression ')' stm
   61    | ATmega328p_procedure
   62    | "switch" '(' expression ')' '{' list_of_case_stms '}'
   63    | "do" stm "while" '(' expression ')' ';'
   64    | "while" '(' expression ')' '{' stm '}'
   65    | "loop" stm
   66    | "break" ';'
   67    | "continue" ';'
   68    | "return" expression ';'
   69    | '{' list_of_stms '}'

   70 list_of_case_stms: case_stm
   71                  | list_of_case_stms case_stm

   72 case_stm: "case" expression ':' stm

   73 left_part: IDENTIFIER
   74          | IDENTIFIER '[' expression ']'

   75 expression: constant_expression
   76           | left_part
   77           | IDENTIFIER '(' list_of_expressions ')'
   78           | '[' list_of_expressions ']'
   79           | '{' list_of_expressions '}'
   80           | '[' expression ".." expression ']'
   81           | expression '+' expression
   82           | expression '*' expression
   83           | expression '-' expression
   84           | expression '/' expression
   85           | expression '%' expression
   86           | '-' expression
   87           | expression "++"
   88           | expression "--"
   89           | "++" expression
   90           | "--" expression
   91           | expression '<' expression
   92           | expression "<=" expression
   93           | expression '>' expression
   94           | expression ">=" expression
   95           | expression "==" expression
   96           | expression "!=" expression
   97           | expression "<<" expression
   98           | expression ">>" expression
   99           | expression '&' expression
  100           | expression '|' expression
  101           | expression "&&" expression
  102           | expression "||" expression
  103           | '!' expression
  104           | '(' expression ')'
  105           | ATmega328p_expression

  106 list_of_expressions: expression
  107                    | list_of_expressions ',' expression

  108 constant_expression: "TRUE"
  109                    | "FALSE"
  110                    | PIN
  111                    | HEXA
  112                    | BINAIRE
  113                    | INTEGER
  114                    | FLOAT
  115                    | STRING

  116 ATmega328p_procedure: "pinMode" '(' expression ',' expression ')' ';'
  117                     | "digitalWrite" '(' expression ',' expression ')' ';'
  118                     | "analogReference" '(' expression ')' ';'
  119                     | "analogWrite" '(' expression ',' expression ')' ';'
  120                     | "peek" '(' ')' ';'
  121                     | "flush" '(' ')' ';'
  122                     | "putc" '(' expression ')' ';'
  123                     | "puts" '(' expression ')' ';'
  124                     | "delay_s" '(' expression ')' ';'
  125                     | "delay_ms" '(' expression ')' ';'

  126 ATmega328p_expression: "LOW"
  127                      | "HIGH"
  128                      | "INPUT"
  129                      | "INPUTPULLUP"
  130                      | "OUTPUT"
  131                      | "digitalRead" '(' expression ')'
  132                      | "analogRead" '(' expression ')'
  133                      | "getc" '(' ')'
  134                      | "available" '(' ')'


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' <Token> (33) 103
    '%' <Token> (37) 85
    '&' <Token> (38) 99
    '(' (40) 16 17 19 21 32 57 58 59 60 62 63 64 77 104 116 117 118 119 120 121 122 123 124 125 131 132 133 134
    ')' (41) 16 17 19 21 32 57 58 59 60 62 63 64 77 104 116 117 118 119 120 121 122 123 124 125 131 132 133 134
    '*' <Token> (42) 82
    '+' <Token> (43) 81
    ',' (44) 14 23 107 116 117 119
    '-' <Token> (45) 83 86
    '/' <Token> (47) 84
    ':' <Token> (58) 12 16 19 24 36 72
    ';' (59) 12 15 16 17 36 45 46 47 48 49 50 51 52 53 54 55 56 63 66 67 68 116 117 118 119 120 121 122 123 124 125
    '<' <Token> (60) 91
    '=' <Token> (61) 15 47
    '>' <Token> (62) 93
    '[' (91) 28 74 78 80
    ']' (93) 28 74 78 80
    '{' (123) 19 21 33 57 58 62 64 69 79
    '|' <Token> (124) 100
    '}' (125) 19 21 33 57 58 62 64 69 79
    error (256)
    "<=" <Token> (258) 92
    ">=" <Token> (259) 94
    "==" <Token> (260) 95
    "!=" <Token> (261) 96
    "<<" <Token> (262) 97
    ">>" <Token> (263) 98
    "&&" <Token> (264) 101
    "||" <Token> (265) 102
    "+=" <Token> (266) 48
    "-=" <Token> (267) 49
    "*=" <Token> (268) 50
    "/=" <Token> (269) 51
    "%=" <Token> (270) 52
    "&=" <Token> (271) 53
    "|=" <Token> (272) 54
    "&&=" <Token> (273) 55
    "||=" <Token> (274) 56
    "++" <Token> (275) 45 87 89
    "--" <Token> (276) 46 88 90
    ".." <Token> (277) 80
    "begin" <Token> (278) 1
    "boolean" <Token> (279) 26
    "break" <Token> (280) 66
    "byte" <Token> (281) 37 39
    "case" <Token> (282) 72
    "continue" <Token> (283) 67
    "do" <Token> (284) 63
    "double" <Token> (285)
    "else" <Token> (286) 57 59
    "end" <Token> (287) 1
    "enum" <Token> (288) 32
    "FALSE" <Token> (289) 109
    "float" <Token> (290) 44
    "foreach" <Token> (291)
    "function" <Token> (292) 16 19
    "if" <Token> (293) 57 58 59 60
    "integer" <Token> (294) 42 43
    "in" <Token> (295)
    "list" <Token> (296) 31
    "long" <Token> (297)
    "loop" <Token> (298) 65
    "of" <Token> (299) 29 30 31
    "procedure" <Token> (300) 17 21
    "range" <Token> (301) 29
    "return" <Token> (302) 68
    "set" <Token> (303) 30
    "short" <Token> (304) 40 41
    "struct" <Token> (305) 33
    "string" <Token> (306) 28
    "switch" <Token> (307) 62
    "TRUE" <Token> (308) 108
    "unsigned" <Token> (309) 39 41 43
    "while" <Token> (310) 63 64
    "pinMode" <Token> (311) 116
    "digitalWrite" <Token> (312) 117
    "analogReference" <Token> (313) 118
    "analogWrite" <Token> (314) 119
    "digitalRead" <Token> (315) 131
    "analogRead" <Token> (316) 132
    "LOW" <Token> (317) 126
    "HIGH" <Token> (318) 127
    "INPUT" <Token> (319) 128
    "INPUTPULLUP" <Token> (320) 129
    "OUTPUT" <Token> (321) 130
    "pin" <Token> (322) 38
    "getc" <Token> (323) 133
    "available" <Token> (324) 134
    "peek" <Token> (325) 120
    "flush" <Token> (326) 121
    "putc" <Token> (327) 122
    "puts" <Token> (328) 123
    "delay_ms" <Token> (329) 125
    "delay_s" <Token> (330) 124
    HEXA <Integer> (331) 111
    BINAIRE <Integer> (332) 112
    IDENTIFIER <String> (333) 13 14 15 16 17 19 21 24 36 73 74 77
    INTEGER <Long> (334) 28 113
    PIN <Integer> (335) 110
    FLOAT <Float> (336) 114
    STRING <String> (337) 115
    HIGHER_THAN_NOT (338)
    HIGHER_THAN_MINUS (339)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (105)
        à gauche: 0
    program (106)
        à gauche: 1
        à droite: 0
    list_of_definitions (107)
        à gauche: 2 3
        à droite: 1 3
    list_of_stms <List<Stm> > (108)
        à gauche: 4 5
        à droite: 1 5 25 69
    definition (109)
        à gauche: 6 7 8 9 10 11
        à droite: 3
    var_definition (110)
        à gauche: 12
        à droite: 6
    list_of_identifiers <List<String> > (111)
        à gauche: 13 14
        à droite: 12 14 32
    type_definition (112)
        à gauche: 15
        à droite: 7
    function_decl (113)
        à gauche: 16
        à droite: 8
    procedure_decl (114)
        à gauche: 17
        à droite: 9
    function_definition (115)
        à gauche: 19
        à droite: 10
    $@1 (116)
        à gauche: 18
        à droite: 19
    procedure_definition (117)
        à gauche: 21
        à droite: 11
    $@2 (118)
        à gauche: 20
        à droite: 21
    list_of_parameters <List<TypeFIELD> > (119)
        à gauche: 22 23
        à droite: 16 17 19 21 23
    parameter <TypeFIELD> (120)
        à gauche: 24
        à droite: 22 23
    block (121)
        à gauche: 25
        à droite: 19 21
    type <Type> (122)
        à gauche: 26 27 28 29 30 31 32 33
        à droite: 12 15 16 19 24 29 30 31 36
    list_of_fields <List<TypeFIELD> > (123)
        à gauche: 34 35
        à droite: 33 35
    field <TypeFIELD> (124)
        à gauche: 36
        à droite: 34 35
    number <Type> (125)
        à gauche: 37 38 39 40 41 42 43 44
        à droite: 27
    stm <Stm> (126)
        à gauche: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        à droite: 4 5 57 58 59 60 63 64 65 72
    list_of_case_stms <List<StmCASE> > (127)
        à gauche: 70 71
        à droite: 62 71
    case_stm <StmCASE> (128)
        à gauche: 72
        à droite: 70 71
    left_part <Expr> (129)
        à gauche: 73 74
        à droite: 45 46 47 48 49 50 51 52 53 54 55 56 76
    expression <Expr> (130)
        à gauche: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
        à droite: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 62 63 64 68 72 74 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 106 107 116 117 118 119 122 123 124 125 131 132
    list_of_expressions <List<Expr> > (131)
        à gauche: 106 107
        à droite: 77 78 79 107
    constant_expression <ExprCONSTANT> (132)
        à gauche: 108 109 110 111 112 113 114 115
        à droite: 75
    ATmega328p_procedure <Expr> (133)
        à gauche: 116 117 118 119 120 121 122 123 124 125
        à droite: 61
    ATmega328p_expression <Expr> (134)
        à gauche: 126 127 128 129 130 131 132 133 134
        à droite: 105


État 0

    0 $accept: • program $end
    1 program: • list_of_definitions "begin" list_of_stms "end"
    2 list_of_definitions: • %empty
    3                    | • list_of_definitions definition

    $défaut  réduction par utilisation de la règle 2 (list_of_definitions)

    program              aller à l'état 1
    list_of_definitions  aller à l'état 2


État 1

    0 $accept: program • $end

    $end  décalage et aller à l'état 3


État 2

    1 program: list_of_definitions • "begin" list_of_stms "end"
    3 list_of_definitions: list_of_definitions • definition
    6 definition: • var_definition
    7           | • type_definition
    8           | • function_decl
    9           | • procedure_decl
   10           | • function_definition
   11           | • procedure_definition
   12 var_definition: • list_of_identifiers ':' type ';'
   13 list_of_identifiers: • IDENTIFIER
   14                    | • list_of_identifiers ',' IDENTIFIER
   15 type_definition: • IDENTIFIER '=' type ';'
   16 function_decl: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   17 procedure_decl: • "procedure" IDENTIFIER '(' list_of_parameters ')' ';'
   19 function_definition: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'
   21 procedure_definition: • "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    "begin"      décalage et aller à l'état 4
    "function"   décalage et aller à l'état 5
    "procedure"  décalage et aller à l'état 6
    IDENTIFIER   décalage et aller à l'état 7

    definition            aller à l'état 8
    var_definition        aller à l'état 9
    list_of_identifiers   aller à l'état 10
    type_definition       aller à l'état 11
    function_decl         aller à l'état 12
    procedure_decl        aller à l'état 13
    function_definition   aller à l'état 14
    procedure_definition  aller à l'état 15


État 3

    0 $accept: program $end •

    $défaut  accepter


État 4

    1 program: list_of_definitions "begin" • list_of_stms "end"
    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • "if" '(' expression ')' '{' stm '}' "else" '{' stm '}'
   58    | • "if" '(' expression ')' '{' stm '}'
   59    | • "if" '(' expression ')' stm "else" stm
   60    | • "if" '(' expression ')' stm
   61    | • ATmega328p_procedure
   62    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   63    | • "do" stm "while" '(' expression ')' ';'
   64    | • "while" '(' expression ')' '{' stm '}'
   65    | • "loop" stm
   66    | • "break" ';'
   67    | • "continue" ';'
   68    | • "return" expression ';'
   69    | • '{' list_of_stms '}'
   73 left_part: • IDENTIFIER
   74          | • IDENTIFIER '[' expression ']'
  116 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  117                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  118                     | • "analogReference" '(' expression ')' ';'
  119                     | • "analogWrite" '(' expression ',' expression ')' ';'
  120                     | • "peek" '(' ')' ';'
  121                     | • "flush" '(' ')' ';'
  122                     | • "putc" '(' expression ')' ';'
  123                     | • "puts" '(' expression ')' ';'
  124                     | • "delay_s" '(' expression ')' ';'
  125                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "if"               décalage et aller à l'état 19
    "loop"             décalage et aller à l'état 20
    "return"           décalage et aller à l'état 21
    "switch"           décalage et aller à l'état 22
    "while"            décalage et aller à l'état 23
    "pinMode"          décalage et aller à l'état 24
    "digitalWrite"     décalage et aller à l'état 25
    "analogReference"  décalage et aller à l'état 26
    "analogWrite"      décalage et aller à l'état 27
    "peek"             décalage et aller à l'état 28
    "flush"            décalage et aller à l'état 29
    "putc"             décalage et aller à l'état 30
    "puts"             décalage et aller à l'état 31
    "delay_ms"         décalage et aller à l'état 32
    "delay_s"          décalage et aller à l'état 33
    IDENTIFIER         décalage et aller à l'état 34
    '{'                décalage et aller à l'état 35

    list_of_stms          aller à l'état 36
    stm                   aller à l'état 37
    left_part             aller à l'état 38
    ATmega328p_procedure  aller à l'état 39


État 5

   16 function_decl: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   19 function_definition: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

    IDENTIFIER  décalage et aller à l'état 40


État 6

   17 procedure_decl: "procedure" • IDENTIFIER '(' list_of_parameters ')' ';'
   21 procedure_definition: "procedure" • IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    IDENTIFIER  décalage et aller à l'état 41


État 7

   13 list_of_identifiers: IDENTIFIER •
   15 type_definition: IDENTIFIER • '=' type ';'

    '='  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 13 (list_of_identifiers)


État 8

    3 list_of_definitions: list_of_definitions definition •

    $défaut  réduction par utilisation de la règle 3 (list_of_definitions)


État 9

    6 definition: var_definition •

    $défaut  réduction par utilisation de la règle 6 (definition)


État 10

   12 var_definition: list_of_identifiers • ':' type ';'
   14 list_of_identifiers: list_of_identifiers • ',' IDENTIFIER

    ':'  décalage et aller à l'état 43
    ','  décalage et aller à l'état 44


État 11

    7 definition: type_definition •

    $défaut  réduction par utilisation de la règle 7 (definition)


État 12

    8 definition: function_decl •

    $défaut  réduction par utilisation de la règle 8 (definition)


État 13

    9 definition: procedure_decl •

    $défaut  réduction par utilisation de la règle 9 (definition)


État 14

   10 definition: function_definition •

    $défaut  réduction par utilisation de la règle 10 (definition)


État 15

   11 definition: procedure_definition •

    $défaut  réduction par utilisation de la règle 11 (definition)


État 16

   66 stm: "break" • ';'

    ';'  décalage et aller à l'état 45


État 17

   67 stm: "continue" • ';'

    ';'  décalage et aller à l'état 46


État 18

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • "if" '(' expression ')' '{' stm '}' "else" '{' stm '}'
   58    | • "if" '(' expression ')' '{' stm '}'
   59    | • "if" '(' expression ')' stm "else" stm
   60    | • "if" '(' expression ')' stm
   61    | • ATmega328p_procedure
   62    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   63    | • "do" stm "while" '(' expression ')' ';'
   63    | "do" • stm "while" '(' expression ')' ';'
   64    | • "while" '(' expression ')' '{' stm '}'
   65    | • "loop" stm
   66    | • "break" ';'
   67    | • "continue" ';'
   68    | • "return" expression ';'
   69    | • '{' list_of_stms '}'
   73 left_part: • IDENTIFIER
   74          | • IDENTIFIER '[' expression ']'
  116 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  117                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  118                     | • "analogReference" '(' expression ')' ';'
  119                     | • "analogWrite" '(' expression ',' expression ')' ';'
  120                     | • "peek" '(' ')' ';'
  121                     | • "flush" '(' ')' ';'
  122                     | • "putc" '(' expression ')' ';'
  123                     | • "puts" '(' expression ')' ';'
  124                     | • "delay_s" '(' expression ')' ';'
  125                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "if"               décalage et aller à l'état 19
    "loop"             décalage et aller à l'état 20
    "return"           décalage et aller à l'état 21
    "switch"           décalage et aller à l'état 22
    "while"            décalage et aller à l'état 23
    "pinMode"          décalage et aller à l'état 24
    "digitalWrite"     décalage et aller à l'état 25
    "analogReference"  décalage et aller à l'état 26
    "analogWrite"      décalage et aller à l'état 27
    "peek"             décalage et aller à l'état 28
    "flush"            décalage et aller à l'état 29
    "putc"             décalage et aller à l'état 30
    "puts"             décalage et aller à l'état 31
    "delay_ms"         décalage et aller à l'état 32
    "delay_s"          décalage et aller à l'état 33
    IDENTIFIER         décalage et aller à l'état 34
    '{'                décalage et aller à l'état 35

    stm                   aller à l'état 47
    left_part             aller à l'état 38
    ATmega328p_procedure  aller à l'état 39


État 19

   57 stm: "if" • '(' expression ')' '{' stm '}' "else" '{' stm '}'
   58    | "if" • '(' expression ')' '{' stm '}'
   59    | "if" • '(' expression ')' stm "else" stm
   60    | "if" • '(' expression ')' stm

    '('  décalage et aller à l'état 48


État 20

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • "if" '(' expression ')' '{' stm '}' "else" '{' stm '}'
   58    | • "if" '(' expression ')' '{' stm '}'
   59    | • "if" '(' expression ')' stm "else" stm
   60    | • "if" '(' expression ')' stm
   61    | • ATmega328p_procedure
   62    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   63    | • "do" stm "while" '(' expression ')' ';'
   64    | • "while" '(' expression ')' '{' stm '}'
   65    | • "loop" stm
   65    | "loop" • stm
   66    | • "break" ';'
   67    | • "continue" ';'
   68    | • "return" expression ';'
   69    | • '{' list_of_stms '}'
   73 left_part: • IDENTIFIER
   74          | • IDENTIFIER '[' expression ']'
  116 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  117                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  118                     | • "analogReference" '(' expression ')' ';'
  119                     | • "analogWrite" '(' expression ',' expression ')' ';'
  120                     | • "peek" '(' ')' ';'
  121                     | • "flush" '(' ')' ';'
  122                     | • "putc" '(' expression ')' ';'
  123                     | • "puts" '(' expression ')' ';'
  124                     | • "delay_s" '(' expression ')' ';'
  125                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "if"               décalage et aller à l'état 19
    "loop"             décalage et aller à l'état 20
    "return"           décalage et aller à l'état 21
    "switch"           décalage et aller à l'état 22
    "while"            décalage et aller à l'état 23
    "pinMode"          décalage et aller à l'état 24
    "digitalWrite"     décalage et aller à l'état 25
    "analogReference"  décalage et aller à l'état 26
    "analogWrite"      décalage et aller à l'état 27
    "peek"             décalage et aller à l'état 28
    "flush"            décalage et aller à l'état 29
    "putc"             décalage et aller à l'état 30
    "puts"             décalage et aller à l'état 31
    "delay_ms"         décalage et aller à l'état 32
    "delay_s"          décalage et aller à l'état 33
    IDENTIFIER         décalage et aller à l'état 34
    '{'                décalage et aller à l'état 35

    stm                   aller à l'état 49
    left_part             aller à l'état 38
    ATmega328p_procedure  aller à l'état 39


État 21

   68 stm: "return" • expression ';'
   73 left_part: • IDENTIFIER
   74          | • IDENTIFIER '[' expression ']'
   75 expression: • constant_expression
   76           | • left_part
   77           | • IDENTIFIER '(' list_of_expressions ')'
   78           | • '[' list_of_expressions ']'
   79           | • '{' list_of_expressions '}'
   80           | • '[' expression ".." expression ']'
   81           | • expression '+' expression
   82           | • expression '*' expression
   83           | • expression '-' expression
   84           | • expression '/' expression
   85           | • expression '%' expression
   86           | • '-' expression
   87           | • expression "++"
   88           | • expression "--"
   89           | • "++" expression
   90           | • "--" expression
   91           | • expression '<' expression
   92           | • expression "<=" expression
   93           | • expression '>' expression
   94           | • expression ">=" expression
   95           | • expression "==" expression
   96           | • expression "!=" expression
   97           | • expression "<<" expression
   98           | • expression ">>" expression
   99           | • expression '&' expression
  100           | • expression '|' expression
  101           | • expression "&&" expression
  102           | • expression "||" expression
  103           | • '!' expression
  104           | • '(' expression ')'
  105           | • ATmega328p_expression
  108 constant_expression: • "TRUE"
  109                    | • "FALSE"
  110                    | • PIN
  111                    | • HEXA
  112                    | • BINAIRE
  113                    | • INTEGER
  114                    | • FLOAT
  115                    | • STRING
  126 ATmega328p_expression: • "LOW"
  127                      | • "HIGH"
  128                      | • "INPUT"
  129                      | • "INPUTPULLUP"
  130                      | • "OUTPUT"
  131                      | • "digitalRead" '(' expression ')'
  132                      | • "analogRead" '(' expression ')'
  133                      | • "getc" '(' ')'
  134                      | • "available" '(' ')'

    '!'            décalage et aller à l'état 50
    '-'            décalage et aller à l'état 51
    "++"           décalage et aller à l'état 52
    "--"           décalage et aller à l'état 53
    "FALSE"        décalage et aller à l'état 54
    "TRUE"         décalage et aller à l'état 55
    "digitalRead"  décalage et aller à l'état 56
    "analogRead"   décalage et aller à l'état 57
    "LOW"          décalage et aller à l'état 58
    "HIGH"         décalage et aller à l'état 59
    "INPUT"        décalage et aller à l'état 60
    "INPUTPULLUP"  décalage et aller à l'état 61
    "OUTPUT"       décalage et aller à l'état 62
    "getc"         décalage et aller à l'état 63
    "available"    décalage et aller à l'état 64
    HEXA           décalage et aller à l'état 65
    BINAIRE        décalage et aller à l'état 66
    IDENTIFIER     décalage et aller à l'état 67
    INTEGER        décalage et aller à l'état 68
    PIN            décalage et aller à l'état 69
    FLOAT          décalage et aller à l'état 70
    STRING         décalage et aller à l'état 71
    '('            décalage et aller à l'état 72
    '{'            décalage et aller à l'état 73
    '['            décalage et aller à l'état 74

    left_part              aller à l'état 75
    expression             aller à l'état 76
    constant_expression    aller à l'état 77
    ATmega328p_expression  aller à l'état 78


État 22

   62 stm: "switch" • '(' expression ')' '{' list_of_case_stms '}'

    '('  décalage et aller à l'état 79


État 23

   64 stm: "while" • '(' expression ')' '{' stm '}'

    '('  décalage et aller à l'état 80


État 24

  116 ATmega328p_procedure: "pinMode" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 81


État 25

  117 ATmega328p_procedure: "digitalWrite" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 82


État 26

  118 ATmega328p_procedure: "analogReference" • '(' expression ')' ';'

    '('  décalage et aller à l'état 83


État 27

  119 ATmega328p_procedure: "analogWrite" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 84


État 28

  120 ATmega328p_procedure: "peek" • '(' ')' ';'

    '('  décalage et aller à l'état 85


État 29

  121 ATmega328p_procedure: "flush" • '(' ')' ';'

    '('  décalage et aller à l'état 86


État 30

  122 ATmega328p_procedure: "putc" • '(' expression ')' ';'

    '('  décalage et aller à l'état 87


État 31

  123 ATmega328p_procedure: "puts" • '(' expression ')' ';'

    '('  décalage et aller à l'état 88


État 32

  125 ATmega328p_procedure: "delay_ms" • '(' expression ')' ';'

    '('  décalage et aller à l'état 89


État 33

  124 ATmega328p_procedure: "delay_s" • '(' expression ')' ';'

    '('  décalage et aller à l'état 90


État 34

   73 left_part: IDENTIFIER •
   74          | IDENTIFIER • '[' expression ']'

    '['  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 73 (left_part)


État 35

    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • "if" '(' expression ')' '{' stm '}' "else" '{' stm '}'
   58    | • "if" '(' expression ')' '{' stm '}'
   59    | • "if" '(' expression ')' stm "else" stm
   60    | • "if" '(' expression ')' stm
   61    | • ATmega328p_procedure
   62    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   63    | • "do" stm "while" '(' expression ')' ';'
   64    | • "while" '(' expression ')' '{' stm '}'
   65    | • "loop" stm
   66    | • "break" ';'
   67    | • "continue" ';'
   68    | • "return" expression ';'
   69    | • '{' list_of_stms '}'
   69    | '{' • list_of_stms '}'
   73 left_part: • IDENTIFIER
   74          | • IDENTIFIER '[' expression ']'
  116 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  117                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  118                     | • "analogReference" '(' expression ')' ';'
  119                     | • "analogWrite" '(' expression ',' expression ')' ';'
  120                     | • "peek" '(' ')' ';'
  121                     | • "flush" '(' ')' ';'
  122                     | • "putc" '(' expression ')' ';'
  123                     | • "puts" '(' expression ')' ';'
  124                     | • "delay_s" '(' expression ')' ';'
  125                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "if"               décalage et aller à l'état 19
    "loop"             décalage et aller à l'état 20
    "return"           décalage et aller à l'état 21
    "switch"           décalage et aller à l'état 22
    "while"            décalage et aller à l'état 23
    "pinMode"          décalage et aller à l'état 24
    "digitalWrite"     décalage et aller à l'état 25
    "analogReference"  décalage et aller à l'état 26
    "analogWrite"      décalage et aller à l'état 27
    "peek"             décalage et aller à l'état 28
    "flush"            décalage et aller à l'état 29
    "putc"             décalage et aller à l'état 30
    "puts"             décalage et aller à l'état 31
    "delay_ms"         décalage et aller à l'état 32
    "delay_s"          décalage et aller à l'état 33
    IDENTIFIER         décalage et aller à l'état 34
    '{'                décalage et aller à l'état 35

    list_of_stms          aller à l'état 92
    stm                   aller à l'état 37
    left_part             aller à l'état 38
    ATmega328p_procedure  aller à l'état 39


État 36
